# civic-proof-il

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  conftest.py  pyproject.toml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/api/: __init__.py  health.py  main.py  settings.py
apps/api/src/api/clients/: __init__.py  minio_client.py  neo4j_client.py  opensearch_client.py  postgres.py
apps/api/src/api/routers/: __init__.py  claims.py  declarations.py  persons.py  pipeline.py  review.py
apps/api/tests/: conftest.py  test_claims_verify.py  test_declarations.py  test_health.py  test_persons.py  test_review.py
apps/migrator/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/reviewer_ui/: Dockerfile  README.md  pyproject.toml
apps/reviewer_ui/src/reviewer_ui/: main.py
apps/reviewer_ui/src/reviewer_ui/templates/: declaration_detail.html  not_found.html  queue.html  task_detail.html
apps/reviewer_ui/tests/: conftest.py  test_ui.py
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/worker/: __init__.py  main.py  settings.py
apps/worker/tests/: conftest.py  test_smoke.py
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  DATA_MODEL.md  DEPLOYMENT.md  PROJECT_STATUS.md  V2_IMPLEMENTATION_PLAN.md  civic-proof-il-v2-implementation-plan.md  political_verifier_v_1_plan.md
scripts/: README.md  bootstrap-dev.sh  enrich_vote_bills.py  eval.py  freshness_check.py  generate-phase1-fixtures.py  index_evidence.py  ingest_all.sh  neo4j_load_phase1_local.py  record-cassettes.sh  record-statements.py  seed-demo.sh  (+3 more)
services/archival/: README.md  pyproject.toml
services/archival/src/civic_archival/: __init__.py  archiver.py  cli.py  fetcher.py
services/archival/tests/: test_archiver.py  test_cli.py  test_fetcher.py
services/claim_decomposition/: README.md  pyproject.toml
services/claim_decomposition/src/civic_claim_decomp/: __init__.py  checkability.py  claim_family_classifier.py  declaration_checkability.py  declaration_decomposer.py  decomposer.py  llm.py  persistence.py  rules.py  temporal_scope_extractor.py
services/claim_decomposition/tests/: test_checkability.py  test_claim_family_classifier.py  test_declaration_checkability.py  test_declaration_decomposer.py  test_decomposer.py  test_election_rules.py  test_gov_decision_rules.py  test_llm.py  test_persistence.py
services/entity_resolution/: README.md  pyproject.toml
services/entity_resolution/src/civic_entity_resolution/: __init__.py  normalize.py  position_term_resolver.py  resolver.py
services/entity_resolution/tests/: test_normalize.py  test_position_term_resolver.py  test_resolver.py  test_resolver_v2.py
services/ingestion/_common/: README.md  pyproject.toml
services/ingestion/_common/src/civic_ingest/: __init__.py  adapter.py  csv_page.py  handlers.py  manifest.py  mk_individual_lookup.py  odata.py  orchestrator.py  queue.py
services/ingestion/_common/tests/: conftest.py  test_handlers.py  test_manifest.py
services/ingestion/elections/: README.md  manifest.yaml  pyproject.toml
services/ingestion/elections/src/civic_ingest_elections/: __init__.py  __main__.py  cli.py  normalize.py  parse.py  party_list_mapping.py  party_list_mapping.yaml  types.py  upsert.py
services/ingestion/elections/tests/: test_elections.py
services/ingestion/gov_il/: README.md  manifest.yaml  pyproject.toml
services/ingestion/gov_il/src/civic_ingest_gov_decisions/: __init__.py  __main__.py  cli.py  normalize.py  parse.py  types.py  upsert.py
services/ingestion/gov_il/tests/: conftest.py  test_gov_decisions.py
services/ingestion/knesset/attendance/: pyproject.toml
services/ingestion/knesset/attendance/src/civic_ingest_attendance/: __init__.py  cli.py  normalize.py  parse.py  upsert.py
services/ingestion/knesset/attendance/tests/: test_attendance.py
services/ingestion/knesset/bill_initiators/: pyproject.toml
services/ingestion/knesset/bill_initiators/src/civic_ingest_bill_initiators/: __init__.py  cli.py  normalize.py  parse.py  upsert.py
services/ingestion/knesset/bill_initiators/tests/: test_bill_initiators.py
services/ingestion/knesset/committee_memberships/: pyproject.toml
services/ingestion/knesset/committee_memberships/src/civic_ingest_committee_memberships/: __init__.py  cli.py  normalize.py  parse.py  upsert.py
services/ingestion/knesset/committee_memberships/tests/: test_committee_memberships.py
services/ingestion/knesset/people/: pyproject.toml
services/ingestion/knesset/people/src/civic_ingest_people/: __init__.py  cli.py  normalize.py  parse.py  upsert.py
services/ingestion/knesset/people/tests/: test_people.py
services/ingestion/knesset/positions/: pyproject.toml
services/ingestion/knesset/positions/src/civic_ingest_positions/: __init__.py  cli.py  normalize.py  parse.py  upsert.py
services/ingestion/knesset/positions/tests/: conftest.py  test_positions.py
services/ingestion/knesset/votes/: pyproject.toml
services/ingestion/knesset/votes/src/civic_ingest_votes/: __init__.py  cli.py  normalize.py  parse.py  upsert.py
services/ingestion/knesset/votes/tests/: test_votes.py
services/normalization/: README.md  pyproject.toml
services/normalization/src/civic_temporal/: __init__.py  knesset_terms.py  normalizer.py
services/normalization/tests/: test_normalizer.py
services/retrieval/: README.md  pyproject.toml
services/retrieval/src/civic_retrieval/: __init__.py  graph.py  lexical.py  rerank.py
services/retrieval/tests/: test_graph.py  test_lexical.py  test_rerank.py
services/review/: README.md  pyproject.toml
services/review/src/civic_review/: __init__.py  audit.py  conflict.py  correction.py  evidence.py  queue.py
services/review/tests/: test_queue.py
services/verification/: README.md  pyproject.toml
services/verification/src/civic_verification/: __init__.py  attribution_judge.py  confidence.py  declaration_verifier.py  engine.py  provenance.py  relation_rules.py
services/verification/tests/: test_attribution_judge.py  test_declaration_verifier.py  test_engine.py  test_relation_rules.py
(+335 files in other folders)
