[project]
name = "civic-proof-il-workspace"
version = "0.0.0"
description = "Workspace root for the civic-proof-il political verifier monorepo."
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
  "apps/migrator",
  "apps/reviewer_ui",
  "packages/common",
    "packages/ontology",
    "packages/clients",
    "packages/prompts",
    "services/archival",
    "services/ingestion/_common",
    "services/ingestion/knesset/people",
    "services/ingestion/knesset/committees",
    "services/ingestion/knesset/votes",
    "services/ingestion/knesset/sponsorships",
    "services/ingestion/knesset/attendance",
    "services/ingestion/knesset/positions",
    "services/ingestion/knesset/bill_initiators",
    "services/ingestion/knesset/committee_memberships",
    "services/entity_resolution",
    "services/claim_decomposition",
    "services/normalization",
    "services/retrieval",
    "services/verification",
    "services/review",
]

[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "PyYAML>=6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["apps", "packages", "services", "tests"]
asyncio_mode = "auto"
pythonpath = ["apps/api/src", "apps/reviewer_ui/src"]
markers = [
    "integration: Phase-1+ acceptance tests that require a running docker-compose stack",
    "live_http: tests that make real outbound HTTP calls (skipped unless explicitly selected)",
    "regression: Phase-6 invariants and provenance shape checks",
]
