[project]
name = "civic-migrator"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/migrator"]
