[project]
name = "civic-reviewer-ui"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "civic-common",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[tool.uv.sources]
civic-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reviewer_ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
