[project]
name = "civic-worker"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "psycopg[binary]>=3.2",
  "neo4j>=5.25",
  "structlog>=24.4",
  "civic-common",
  "civic-ingest",
]

[tool.uv.sources]
civic-common = { workspace = true }
civic-ingest = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
