[project]
name = "civic-claim-decomp"
version = "0.0.0"
description = "Rule-first (+ optional LLM fallback) claim decomposition for civic-proof-il. Splits a single statement into atomic claims mapped to the ontology."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "jsonschema>=4.21",
  "PyYAML>=6",
  "civic-common",
  "civic-ontology",
  "civic-prompts",
]

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.uv.sources]
civic-common = { workspace = true }
civic-ontology = { workspace = true }
civic-prompts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_claim_decomp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
