[project]
name = "civic-temporal"
version = "0.0.0"
description = "Temporal normalization (Hebrew/English/ISO/Knesset-term phrases) for civic-proof-il claim decomposition."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "civic-common",
  "civic-ontology",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
civic-common = { workspace = true }
civic-ontology = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_temporal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
