[project]
name = "civic-retrieval"
version = "0.0.0"
description = "Graph + lexical retrieval and deterministic reranker for civic-proof-il verification."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "neo4j>=5.20",
  "opensearch-py>=2.4",
  "civic-common",
  "civic-clients",
  "civic-ontology",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
civic-common = { workspace = true }
civic-clients = { workspace = true }
civic-ontology = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_retrieval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
