[project]
name = "civic-review"
version = "0.0.0"
description = "Review workflow MVP: queue, conflict routing, and audit log for civic-proof-il."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "psycopg[binary]>=3.2",
  "civic-common",
  "civic-ontology",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
civic-common = { workspace = true }
civic-ontology = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_review"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
