[project]
name = "civic-verification"
version = "0.0.0"
description = "Deterministic verdict engine, abstention policy, and confidence rubric for civic-proof-il."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "civic-common",
  "civic-ontology",
  "civic-retrieval",
  "civic-prompts",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
civic-common = { workspace = true }
civic-ontology = { workspace = true }
civic-retrieval = { workspace = true }
civic-prompts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_verification"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
