[project]
name = "civic-ingest"
version = "0.0.0"
description = "Shared ingestion utilities: source manifests, Postgres-native job queue, ingest-run orchestration."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "psycopg[binary]>=3.2",
  "pyyaml>=6.0",
  "structlog>=24.4",
  "civic-common",
  "civic-clients",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[tool.uv.sources]
civic-common = { workspace = true }
civic-clients = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
