[project]
name = "civic-ingest-bill-initiators"
version = "0.0.0"
description = "Phase-2.5 bill-initiators adapter (Knesset KNS_BillInitiator → SPONSORED edges)."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "structlog>=24.4",
  "civic-ingest",
  "civic-archival",
  "civic-clients",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
civic-ingest = { workspace = true }
civic-archival = { workspace = true }
civic-clients = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_ingest_bill_initiators"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
