[project]
name = "civic-ingest-committee-memberships"
version = "0.0.0"
description = "Phase-2.5 committee-memberships adapter (oknesset mk_individual_committees.csv → MEMBER_OF_COMMITTEE edges)."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "structlog>=24.4",
  "civic-ingest",
  "civic-archival",
  "civic-clients",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
civic-ingest = { workspace = true }
civic-archival = { workspace = true }
civic-clients = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_ingest_committee_memberships"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
