[project]
name = "civic-ingest-people"
version = "0.0.0"
description = "Phase-2 people-and-roles adapter (Knesset KNS_Person / KNS_PersonToPosition)."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "structlog>=24.4",
  "civic-ingest",
  "civic-archival",
  "civic-clients",
  "civic-entity-resolution",
  "civic-ontology",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
civic-ingest = { workspace = true }
civic-archival = { workspace = true }
civic-clients = { workspace = true }
civic-entity-resolution = { workspace = true }
civic-ontology = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_ingest_people"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
