[project]
name = "civic-ingest-positions"
version = "0.0.0"
description = "Phase-2.5 positions adapter (Knesset KNS_PersonToPosition → Party/Office + MEMBER_OF/HELD_OFFICE edges)."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "structlog>=24.4",
  "civic-ingest",
  "civic-archival",
  "civic-clients",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
civic-ingest = { workspace = true }
civic-archival = { workspace = true }
civic-clients = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_ingest_positions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
