[project]
name = "civic-ingest-votes"
version = "0.0.0"
description = "Phase-2 plenum vote adapter (Knesset KNS_Vote / KNS_VoteDetails)."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "structlog>=24.4",
  "civic-ingest",
  "civic-archival",
  "civic-clients",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv.sources]
civic-ingest = { workspace = true }
civic-archival = { workspace = true }
civic-clients = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civic_ingest_votes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
